Checked .h files and made some support functions.

--- a/orbit.cfg
+++ b/orbit.cfg
@@ -1,30 +1,27 @@
 job-name			ORBITTRACK
 directory:outputs		OUT
-directory:logs			LOG
-GDAs:dir             	    	FIELDS
+directory:gdas        	    	FIELDS
 
-io:restart-backups              2
-frequency:particle-output       0
-frequency:grid-output           0
-snapshot-epochs                 (0,3.0e9,5.0e7)
+vxmax				1
+vymax				1
+vzmax				1
+Nvx				50
+Nvy				50
+Nvz				50
 
-max-dt                          50
-time-stop   3000
+Npoints				1
+x0				100
+z0				0
 
-max-mpi-sync-level 		4 
-time-refinement-level		0
+tend				10000.0
+nts				10000
 
-sf:max-gas-temperature          8000
-sf:min-stellar-particle-mass    1.0e4
-sf:sampling-timescale           0.1 Myr
-sf:timescale                    20 Myr
-snII:time-duration              10 Myr
-snII:time-before-start          3 Myr
-snII:energy-per-explosion       2
+minx				0.0
+maxx				400.0
+minz				-200.0
+maxz				200.0
 
-io:num-grid-files                8
-io:num-particle-files            8
-io:artio-create-fileset-directory        true
-
-
-
+Lx				400.0
+Lz				400.0
+nx				4096
+nz				4096
