Now doesn't erase source when compiling.

--- a/orbit.cfg
+++ b/orbit.cfg
@@ -1,17 +1,17 @@
 job-name			ORBITTRACK
-directory:outputs		OUT
-directory:gdas        	    	FIELDS
+directory:outputs		OUT/
+directory:gdas        	    	D:/asymmetric-mime400redo/data/
 
-vxmax				1
-vymax				1
-vzmax				1
+vxmax				1.0
+vymax				1.0
+vzmax				1.0
 Nvx				50
 Nvy				50
 Nvz				50
 
 Npoints				1
-x0				100
-z0				0
+x0				100.0
+z0				0.0
 
 tend				10000.0
 nts				10000
@@ -25,3 +25,5 @@ Lx				400.0
 Lz				400.0
 nx				4096
 nz				4096
+
+slice				23
