Continued debugging. Initilization works, some issues with gda reading persist.

--- a/orbit.cfg
+++ b/orbit.cfg
@@ -1,6 +1,6 @@
 job-name			ORBITTRACK
-directory:outputs		OUT/
-directory:gdas        	    	D:/asymmetric-mime400redo/data/
+directory:outputs		OUT
+directory:gdas        	    	D:/asymmetric-mime400redo/data
 
 vxmax				1.0
 vymax				1.0
