--- a/orbit.cfg
+++ b/orbit.cfg
@@ -1,13 +1,13 @@
 job-name			ORBITTRACK
-directory:outputs		OUT2
-directory:gdas        	    	D:/asymmetric-mime400redo/data
+directory:outputs		OUT
+directory:gdas        	    	EcrossBgdas
 
 vxmax				1.0
 vymax				1.0
 vzmax				1.0
-Nvx				50
-Nvy				50
-Nvz				50
+Nvx				21
+Nvy				21
+Nvz				21
 
 Npoints				1
 x0				207.25
@@ -23,10 +23,10 @@ maxz				200.0
 
 Lx				400.0
 Lz				400.0
-nx				4096
-nz				4096
+nx				256
+nz				256
 
-slice				23
+slice				1
 
 omp:nthreads			8
 fulltrack			1
