Has the wpewce parameter fro Boris timestep determination.

--- a/orbit.cfg
+++ b/orbit.cfg
@@ -5,9 +5,9 @@ directory:gdas        	    	EcrossBgdas
 vxmax				1.0
 vymax				1.0
 vzmax				1.0
-Nvx				21
-Nvy				21
-Nvz				21
+Nvx				11
+Nvy				11
+Nvz				11
 
 Npoints				1
 x0				207.25
@@ -25,8 +25,9 @@ Lx				400.0
 Lz				400.0
 nx				256
 nz				256
+wpewce				2.0
 
 slice				1
 
 omp:nthreads			8
-fulltrack			1
+fulltrack			0
